--- a/config.yml
+++ b/config.yml
@@ -8,3 +8,9 @@ db_path:
 fastq_directory:
   class: Directory
   location: data 
+raw_chm13:
+  class: File
+  path: /storage/fpantini/reference/indexGenome/chm13v2.0.fa
+method: 2 #0 is the default algorithm
+          #1 IS linear-time algorithm for constructing suffix array
+          #2 Algorithm implemented in BWT-SW(works with whole human genome)
