--- a/metaphlan4/Dockerfile
+++ b/metaphlan4/Dockerfile
@@ -2,14 +2,18 @@ FROM ubuntu:20.04
 
 #machine initialization
 RUN apt-get update
-RUN apt-get install gcc make libbz2-dev zlib1g-dev libncurses5-dev libncursesw5-dev liblzma-dev bzip2 g++ rsync libsqlite3-dev -y
-
-WORKDIR /
-#python3 installation
 RUN apt-get update
-RUN apt-get install build-essential libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev -y
+RUN apt-get update
+RUN apt-get install gcc make libbz2-dev zlib1g-dev libncurses5-dev libncursesw5-dev liblzma-dev bzip2 g++ rsync libsqlite3-dev bzip2 -y
+
+#python3 installation
+RUN apt-get install build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev -y
 COPY ./Python-3.11.2.tar.xz /tmp/Python-3.11.2.tar.xz
 RUN tar -xf /tmp/Python-3.11.2.tar.xz
+
+WORKDIR /Python-3.11.2
+RUN ./configure --enable-optimizations
+RUN make install
 
 WORKDIR /
 #bowtie2 install 
