--- a/metaphlan4/Dockerfile
+++ b/metaphlan4/Dockerfile
@@ -26,8 +26,8 @@ RUN pip3 install biopython
 #metaphlan installation
 RUN pip3 install metaphlan
 
-WORKDIR /metaphlanDB
-RUN metaphlan --install --bowtie2db /metaphlanDB/
+#WORKDIR /metaphlanDB
+#RUN metaphlan --install --bowtie2db /metaphlanDB/
 
 WORKDIR /
 
