--- a/metaphlan4/Dockerfile
+++ b/metaphlan4/Dockerfile
@@ -27,8 +27,9 @@ RUN pip3 install biopython
 RUN pip3 install metaphlan
 
 #WORKDIR /metaphlanDB
-#RUN metaphlan --install --bowtie2db /metaphlanDB/
+#RUN  metaphlan --install  --bowtie2db /metaphlanDB/
 
 WORKDIR /
 
+COPY biomFusion.py .
 COPY metaphlan4.sh .
