--- a/configIndex.yml
+++ b/configIndex.yml
@@ -1,5 +1,5 @@
 raw_chm13:
   class: File
-  path: /backup/fpantini/chm13/chm13v2.0.fa
+  path: /backup/fpantini/GRCm39/GCF_000001635.27_GRCm39_genomic.fna
 output_db: ""
 method: ""
