created a new find

--- a/checkInputContainer/Dockerfile
+++ b/checkInputContainer/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update -y
 RUN apt-get install gcc make libbz2-dev zlib1g-dev libncurses5-dev libncursesw5-dev liblzma-dev bzip2 g++ rsync libsqlite3-dev bzip2 -y
 
 COPY findFiles.sh .
+COPY findFilesNew.sh .
 COPY sendFiles.sh .
 COPY findBowtie.sh .
 COPY sendBowtie.sh .
