update metaphlan4 Dockerfile

--- a/metaphlan4/Dockerfile
+++ b/metaphlan4/Dockerfile
@@ -25,6 +25,8 @@ RUN pip3 install numpy
 RUN pip3 install biopython
 #metaphlan installation
 RUN pip3 install metaphlan
+#humann installation
+RUN pip3 install humann
 
 #WORKDIR /metaphlanDB
 #RUN  metaphlan --install  --bowtie2db /metaphlanDB/
