--- a/metaphlan4/Dockerfile
+++ b/metaphlan4/Dockerfile
@@ -4,7 +4,7 @@ FROM ubuntu:20.04
 RUN apt-get update
 RUN apt-get update
 RUN apt-get update
-RUN apt-get install gcc make libbz2-dev zlib1g-dev libncurses5-dev libncursesw5-dev liblzma-dev bzip2 g++ rsync libsqlite3-dev bzip2 -y
+RUN apt-get install gcc make libbz2-dev zlib1g-dev libncurses5-dev libncursesw5-dev liblzma-dev bzip2 g++ rsync libsqlite3-dev bzip2 openjdk-11-jre -y
 
 #python3 installation
 RUN apt-get install build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev -y
@@ -29,6 +29,8 @@ RUN pip3 install h5py
 RUN pip3 install metaphlan
 #humann installation
 RUN pip3 install humann
+#kneaddata installation
+RUN pip3 install kneaddata
 
 #WORKDIR /metaphlanDB
 #RUN  metaphlan --install  --bowtie2db /metaphlanDB/
