--- a/configHumann.yml
+++ b/configHumann.yml
@@ -1,9 +1,9 @@
 read_1:
   class: File
-  path: /backup/fpantini/humann_DB/input/HV02_R2.fq.gz
+  path: /backup/fpantini/humann_DB/input/HV02_R2.fastq.gz
 read_2:
   class: File
-  path: /backup/fpantini/humann_DB/input/HV02_R2.fq.gz
+  path: /backup/fpantini/humann_DB/input/HV02_R2.fastq.gz
 report:
   class: File
   path: /backup/fpantini/humann_DB/input/HV02_output.txt
