--- a/checkInputContainer/Dockerfile
+++ b/checkInputContainer/Dockerfile
@@ -9,4 +9,7 @@ COPY findFiles.sh .
 COPY sendFiles.sh .
 COPY findBowtie.sh .
 COPY sendBowtie.sh .
-COPY countFastq.sh .
+COPY findReport.sh .
+COPY sendReport.sh .
+COPY findMetaReport.sh .
+COPY sendMetaReport.sh .
